# git-m

./: Cargo.toml  README.md
.cargo/: config.toml
crates/git-m/: Cargo.toml
crates/git-m/src/: command.rs  constant.rs  error.rs  lib.rs  opts.rs  runner.rs
crates/git-m/src/cli/: init.rs  list.rs  mod.rs
crates/git-m/src/config/: codehub.rs  gdir.rs  hub.rs  mod.rs
crates/git-m/src/event/: event_loop.rs  execute.rs  executor.rs  mod.rs
crates/git-m/src/fs/: walkdir.rs
crates/git-m/src/fs/walkdir/: iter.rs  mod.rs  stream.rs
crates/git-m/src/git/: gnu.rs  mod.rs
crates/git-m/src/libs/: error.rs  log.rs  malloc.rs
crates/git-m/src/runtime/: mod.rs
crates/git-m/src/runtime/context/: mod.rs  opts.rs
docker/: Dockerfile  compose.yaml  setup.sh
