[workspace]
members  = ["crates/git-m"]
resolver = "3"


[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"


[workspace.dependencies]
# Member
git-m = { path = "crates/git-m" }

# Macro

# Development

# Build


[patch.crates-io]


[workspace.lints.clippy]
# cargo       = "warn"
# restriction = "warn"
as_conversions = "warn"
pedantic       = "warn"


[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = "symbols"
