[package]
name        = "git-m"
description = "git-m"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lints]
workspace = true


[dependencies]
clap               = { version = "4.5.40", features = ["cargo", "derive"] }
futures            = { version = "0.3" }
nill               = { version = "1.1.0" }
thiserror          = { version = "2.0" }
tokio              = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
