[package]
name        = "git-m"
description = "git-m"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]


[lints]
workspace = true


[dependencies]
clap               = { version = "4.5.40", features = ["cargo", "derive"] }
futures            = { version = "0.3" }
libgit             = { package = "git2", version = "0.20" }
mimalloc           = { version = "0.1", optional = true }
nill               = { version = "1.1.0" }
serde              = { version = "1.0", features = ["derive"] }
thiserror          = { version = "2.0" }
tokio              = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
toml               = { version = "0.8" }
tracing            = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[features]
default  = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
